--- a/visualization.html
+++ b/visualization.html
@@ -1730,7 +1730,7 @@
 
             viewLiveButton.addEventListener('click', () => {
                 setActiveMainNavButton(viewLiveButton);
-                window.location.href = 'live.html';
+                window.location.href = 'live_v2.html';
             });
 
             viewStatsButton.addEventListener('click', () => {
