--- a/live_v2.html
+++ b/live_v2.html
@@ -1222,8 +1222,9 @@
                 <div></div> <!-- Espaçador para manter o alinhamento central -->
             </div>
             <div class="logo-container">
-                <img src="logo.png" alt="Logo" class="logo">
-                <h1 class="logo-text">RW TIPS</h1>
+                <img src="https://i.ibb.co/G4Y8sHMk/Chat-GPT-Image-21-de-abr-de-2025-16-14-34-1.png" alt="RW Tips Logo"
+                    class="logo">
+                <h2 class="logo-text">👑 𝗥𝗪 𝗧𝗜𝗣𝗦 🎮</h2>
             </div>
             <h2 class="page-title">eSoccer</h2>
         </div>
