--- a/dashboard.html
+++ b/dashboard.html
@@ -4,16 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RW TIPS - Análise de Cenários</title>
-    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Sora:wght@400;600;700&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <style>
         body {
             background: linear-gradient(135deg, #1a1a1a, #2d2d2d);
             color: #e0e0e0;
-            font-family: 'Arial', sans-serif;
+            font-family: 'Inter', sans-serif;
             min-height: 100vh;
             padding-bottom: 20px;
+            letter-spacing: -0.011em;
         }
         .header {
             background: linear-gradient(90deg, #00cc66, #006633);
@@ -33,10 +35,12 @@
             margin-right: 10px;
         }
         .logo-text {
+            font-family: 'Sora', sans-serif;
             font-size: 1.5rem;
             font-weight: bold;
             color: #fff;
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+            letter-spacing: -0.02em;
         }
         .crown, .game {
             font-size: 1.2rem;
@@ -63,6 +67,8 @@
             color: #ffeb3b;
         }
         .title-gradient {
+            font-family: 'Sora', sans-serif;
+            letter-spacing: -0.03em;
             background: linear-gradient(90deg, #00cc66, #ffeb3b);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
