--- a/dashboard.html
+++ b/dashboard.html
@@ -14,6 +14,9 @@
             --battle-volta-6m-color: #FFD700;
             --gt-leagues-12m-color: #32CD32;
             --h2h-gg-8m-color: #8A2BE2;
+            --card-bg: rgba(255, 255, 255, 0.08);
+            --highlight-color: #00cc66;
+            --shadow-color: rgba(0, 0, 0, 0.3);
         }
         body {
             background: linear-gradient(135deg, #1a1a1a, #2d2d2d);
@@ -26,7 +29,7 @@
         .header {
             background: linear-gradient(90deg, #00cc66, #006633);
             padding: 15px 0;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+            box-shadow: 0 4px 12px var(--shadow-color);
             position: sticky;
             top: 0;
             z-index: 1000;
@@ -45,7 +48,7 @@
             font-size: 1.5rem;
             font-weight: bold;
             color: #fff;
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+            text-shadow: 2px 2px 4px var(--shadow-color);
             letter-spacing: -0.02em;
         }
         .crown, .game {
@@ -90,8 +93,8 @@
             transition: all 0.3s;
         }
         .nav-tabs .nav-link.active {
-            color: #00cc66;
-            border-bottom: 2px solid #00cc66;
+            color: var(--highlight-color);
+            border-bottom: 2px solid var(--highlight-color);
             background: rgba(255, 255, 255, 0.05);
         }
         .nav-tabs .nav-link:hover {
@@ -103,7 +106,7 @@
         .filter-title {
             font-weight: bold;
             margin-bottom: 10px;
-            color: #00cc66;
+            color: var(--highlight-color);
         }
         .filter-btn {
             background: #333;
@@ -115,9 +118,9 @@
             transition: all 0.3s;
         }
         .filter-btn.active, .filter-btn:hover {
-            background: #00cc66;
+            background: var(--highlight-color);
             color: #fff;
-            border-color: #00cc66;
+            border-color: var(--highlight-color);
         }
         .league-badge {
             background: #333;
@@ -129,100 +132,113 @@
             transition: all 0.3s;
         }
         .league-badge.active, .league-badge:hover {
-            background: #00cc66;
+            background: var(--highlight-color);
             color: #fff;
-            border-color: #00cc66;
+            border-color: var(--highlight-color);
         }
-        .league-gt.active { background: #32CD32; border-color: #32CD32; }
-        .league-battle.active { background: #FF4C4C; border-color: #FF4C4C; }
-        .league-volta.active { background: #FFD700; border-color: #FFD700; }
-        .league-h2h.active { background: #8A2BE2; border-color: #8A2BE2; }
         .best-players-container {
             display: flex;
             flex-wrap: wrap;
             gap: 20px;
             margin: 20px 0;
         }
-        .best-player-section {
-            background: rgba(255, 255, 255, 0.05);
-            border-radius: 10px;
-            padding: 15px;
-            flex: 1;
+        .best-player-card {
+            background: var(--card-bg);
+            border-radius: 12px;
+            padding: 20px;
+            box-shadow: 0 6px 12px var(--shadow-color);
+            transition: transform 0.3s, box-shadow 0.3s;
             min-width: 300px;
+            flex: 1;
+        }
+        .best-player-card:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 10px 20px var(--shadow-color);
         }
         .league-header {
-            margin-bottom: 10px;
-            padding-left: 10px;
-            font-weight: bold;
-        }
-        .league-header.battle-8m {
-            border-left: 4px solid var(--battle-8m-color);
-        }
-        .league-header.battle-volta-6m {
-            border-left: 4px solid var(--battle-volta-6m-color);
-        }
-        .league-header.gt-leagues-12m {
-            border-left: 4px solid var(--gt-leagues-12m-color);
-        }
-        .league-header.h2h-gg-8m {
-            border-left: 4px solid var(--h2h-gg-8m-color);
-        }
-        .best-player-card {
-            background: rgba(255, 255, 255, 0.03);
-            border-radius: 8px;
-            padding: 10px;
-            margin-bottom: 10px;
+            margin-bottom: 15px;
+            padding-left: 15px;
+            font-family: 'Sora', sans-serif;
+            font-weight: 600;
+            font-size: 1.2rem;
+            text-transform: uppercase;
             display: flex;
-            justify-content: space-between;
             align-items: center;
         }
+        .league-header::before {
+            content: '';
+            width: 6px;
+            height: 20px;
+            margin-right: 10px;
+            border-radius: 3px;
+        }
+        .league-header.battle-8m::before { background: var(--battle-8m-color); }
+        .league-header.battle-volta-6m::before { background: var(--battle-volta-6m-color); }
+        .league-header.gt-leagues-12m::before { background: var(--gt-leagues-12m-color); }
+        .league-header.h2h-gg-8m::before { background: var(--h2h-gg-8m-color); }
         .best-player-info {
             display: flex;
             align-items: center;
+            margin-bottom: 15px;
         }
         .best-player-icon {
             color: #ffeb3b;
+            font-size: 1.5rem;
             margin-right: 10px;
         }
         .best-player-name {
-            font-weight: bold;
+            font-weight: 700;
+            color: #fff;
+            font-size: 1.1rem;
         }
         .best-player-stats {
-            display: flex;
-            gap: 15px;
+            display: grid;
+            grid-template-columns: repeat(4, 1fr);
+            gap: 10px;
         }
         .stat-item {
+            background: rgba(255, 255, 255, 0.05);
+            border-radius: 8px;
+            padding: 10px;
             text-align: center;
+            transition: background 0.3s;
+        }
+        .stat-item:hover {
+            background: rgba(255, 255, 255, 0.1);
         }
         .stat-value {
             display: block;
-            font-weight: bold;
-            color: #00cc66;
+            font-weight: 600;
+            color: var(--highlight-color);
+            font-size: 1.1rem;
         }
         .stat-label {
             font-size: 0.8rem;
             color: #a0a0a0;
+            text-transform: uppercase;
         }
         .charts-row {
             margin: 20px 0;
         }
         .chart-container {
-            background: rgba(255, 255, 255, 0.05);
-            border-radius: 10px;
+            background: var(--card-bg);
+            border-radius: 12px;
             padding: 15px;
             height: 300px;
+            box-shadow: 0 4px 8px var(--shadow-color);
         }
         .section-title {
-            color: #00cc66;
-            font-weight: bold;
+            color: var(--highlight-color);
+            font-weight: 600;
             margin: 20px 0 10px;
+            font-family: 'Sora', sans-serif;
         }
         .table-dark {
-            background: rgba(255, 255, 255, 0.05);
+            background: var(--card-bg);
         }
         .table-dark th {
             background: #333;
-            color: #00cc66;
+            color: var(--highlight-color);
         }
         .table-dark td {
             color: #e0e0e0;
@@ -237,13 +253,13 @@
             transition: all 0.3s;
         }
         .pagination .page-item.active .page-link {
-            background: #00cc66;
-            border-color: #00cc66;
+            background: var(--highlight-color);
+            border-color: var(--highlight-color);
             color: #fff;
         }
         .pagination .page-link:hover {
-            background: #00cc66;
-            border-color: #00cc66;
+            background: var(--highlight-color);
+            border-color: var(--highlight-color);
             color: #fff;
         }
         .strategy-container {
@@ -253,9 +269,10 @@
             margin: 20px 0;
         }
         .strategy-card {
-            background: rgba(255, 255, 255, 0.05);
-            border-radius: 10px;
+            background: var(--card-bg);
+            border-radius: 12px;
             padding: 15px;
+            box-shadow: 0 4px 8px var(--shadow-color);
             flex: 1;
             min-width: 300px;
         }
@@ -264,8 +281,9 @@
             color: #fff;
             padding: 10px;
             border-radius: 8px 8px 0 0;
-            font-weight: bold;
+            font-weight: 600;
             text-align: center;
+            font-family: 'Sora', sans-serif;
         }
         .strategy-body {
             padding: 10px;
@@ -293,8 +311,8 @@
         }
         .strategy-stat-value {
             display: block;
-            font-weight: bold;
-            color: #00cc66;
+            font-weight: 600;
+            color: var(--highlight-color);
         }
         .strategy-stat-label {
             font-size: 0.8rem;
@@ -334,8 +352,8 @@
             min-width: 150px;
         }
         .game-stat-title {
-            font-weight: bold;
-            color: #00cc66;
+            font-weight: 600;
+            color: var(--highlight-color);
         }
         .game-stat-value {
             color: #e0e0e0;
@@ -345,11 +363,11 @@
             border-radius: 10px;
             font-size: 0.9rem;
         }
-        .league-tag.battle-8m { background: #FF4C4C; color: #fff; }
-        .league-tag.battle-volta-6m { background: #FFD700; color: #fff; }
-        .league-tag.gt-leagues-12m { background: #32CD32; color: #fff; }
-        .league-tag.h2h-gg-8m { background: #8A2BE2; color: #fff; }
-        .high-value { color: #00cc66; font-weight: bold; }
+        .league-tag.battle-8m { background: var(--battle-8m-color); color: #fff; }
+        .league-tag.battle-volta-6m { background: var(--battle-volta-6m-color); color: #fff; }
+        .league-tag.gt-leagues-12m { background: var(--gt-leagues-12m-color); color: #fff; }
+        .league-tag.h2h-gg-8m { background: var(--h2h-gg-8m-color); color: #fff; }
+        .high-value { color: var(--highlight-color); font-weight: 600; }
         .medium-value { color: #ffeb3b; }
         .low-value { color: #ff3a5e; }
         .top-nav {
@@ -361,15 +379,16 @@
             background: #333;
             border: 1px solid #555;
             color: #e0e0e0;
-            padding: 5px 15px;
-            border-radius: 20px;
+            padding: 8px 20px;
+            border-radius: 25px;
             cursor: pointer;
             transition: all 0.3s;
+            font-weight: 500;
         }
         .top-nav-button.active, .top-nav-button:hover {
-            background: #00cc66;
+            background: var(--highlight-color);
             color: #fff;
-            border-color: #00cc66;
+            border-color: var(--highlight-color);
         }
     </style>
 </head>
@@ -671,7 +690,12 @@
 
             function normalizeLeagueName(leagueName) {
                 if (!leagueName) return leagueName;
-                return leagueName.replace(/_/g, ' ').toLowerCase();
+                leagueName = leagueName.replace(/_/g, ' ').toLowerCase();
+                if (leagueName.includes('battle 8m')) return 'Battle 8m';
+                if (leagueName.includes('battle volta 6m')) return 'Battle Volta 6m';
+                if (leagueName.includes('gt leagues 12m')) return 'GT Leagues 12m';
+                if (leagueName.includes('h2h gg 8m')) return 'H2H GG 8m';
+                return leagueName;
             }
 
             function extractPlayerName(teamName) {
@@ -700,7 +724,7 @@
                 let gamesFilteredByLeague = allGames;
                 if (selectedLeague) {
                     gamesFilteredByLeague = allGames.filter(game => 
-                        game.league.name.includes(selectedLeague.toLowerCase())
+                        game.league.name === selectedLeague
                     );
                 }
 
@@ -955,10 +979,10 @@
                     }
 
                     let leagueTagClass = '';
-                    if (game.league.name.includes('battle 8m')) leagueTagClass = 'battle-8m';
-                    else if (game.league.name.includes('battle volta 6m')) leagueTagClass = 'battle-volta-6m';
-                    else if (game.league.name.includes('gt leagues 12m')) leagueTagClass = 'gt-leagues-12m';
-                    else if (game.league.name.includes('h2h gg 8m')) leagueTagClass = 'h2h-gg-8m';
+                    if (game.league.name === 'Battle 8m') leagueTagClass = 'battle-8m';
+                    else if (game.league.name === 'Battle Volta 6m') leagueTagClass = 'battle-volta-6m';
+                    else if (game.league.name === 'GT Leagues 12m') leagueTagClass = 'gt-leagues-12m';
+                    else if (game.league.name === 'H2H GG 8m') leagueTagClass = 'h2h-gg-8m';
 
                     const row = document.createElement('tr');
                     row.className = 'game-row';
@@ -1128,40 +1152,38 @@
                         }, playerData[0]);
 
                         const leagueSection = document.createElement('div');
-                        leagueSection.className = 'best-player-section';
+                        leagueSection.className = 'best-player-card';
 
                         let leagueHeaderClass = '';
-                        if (leagueName.includes('battle 8m')) leagueHeaderClass = 'battle-8m';
-                        else if (leagueName.includes('battle volta 6m')) leagueHeaderClass = 'battle-volta-6m';
-                        else if (leagueName.includes('gt leagues 12m')) leagueHeaderClass = 'gt-leagues-12m';
-                        else if (leagueName.includes('h2h gg 8m')) leagueHeaderClass = 'h2h-gg-8m';
+                        if (leagueName === 'Battle 8m') leagueHeaderClass = 'battle-8m';
+                        else if (leagueName === 'Battle Volta 6m') leagueHeaderClass = 'battle-volta-6m';
+                        else if (leagueName === 'GT Leagues 12m') leagueHeaderClass = 'gt-leagues-12m';
+                        else if (leagueName === 'H2H GG 8m') leagueHeaderClass = 'h2h-gg-8m';
 
                         leagueSection.innerHTML = `
                             <div class="league-header ${leagueHeaderClass}">
                                 ${leagueName}
                             </div>
-                            <div class="best-player-card">
-                                <div class="best-player-info">
-                                    <i class="bi bi-trophy-fill best-player-icon"></i>
-                                    <span class="best-player-name">Destaque: ${topPlayer.name}</span>
+                            <div class="best-player-info">
+                                <i class="bi bi-trophy-fill best-player-icon"></i>
+                                <span class="best-player-name">Destaque: ${topPlayer.name}</span>
+                            </div>
+                            <div class="best-player-stats">
+                                <div class="stat-item">
+                                    <span class="stat-value">${topPlayer.avgGoalsScoredHT.toFixed(2)}</span>
+                                    <span class="stat-label">Gols HT</span>
                                 </div>
-                                <div class="best-player-stats">
-                                    <div class="stat-item">
-                                        <span class="stat-value">${topPlayer.avgGoalsScoredHT.toFixed(2)}</span>
-                                        <span class="stat-label">Média Gols HT</span>
-                                    </div>
-                                    <div class="stat-item">
-                                        <span class="stat-value">${topPlayer.avgGoalsScoredFT.toFixed(2)}</span>
-                                        <span class="stat-label">Média Gols FT</span>
-                                    </div>
-                                    <div class="stat-item">
-                                        <span class="stat-value">${topPlayer.avgGoalsConcededHT.toFixed(2)}</span>
-                                        <span class="stat-label">Gols Sofr. HT</span>
-                                    </div>
-                                    <div class="stat-item">
-                                        <span class="stat-value">${topPlayer.avgGoalsConcededFT.toFixed(2)}</span>
-                                        <span class="stat-label">Gols Sofr. FT</span>
-                                    </div>
+                                <div class="stat-item">
+                                    <span class="stat-value">${topPlayer.avgGoalsScoredFT.toFixed(2)}</span>
+                                    <span class="stat-label">Gols FT</span>
+                                </div>
+                                <div class="stat-item">
+                                    <span class="stat-value">${topPlayer.avgGoalsConcededHT.toFixed(2)}</span>
+                                    <span class="stat-label">Sofr. HT</span>
+                                </div>
+                                <div class="stat-item">
+                                    <span class="stat-value">${topPlayer.avgGoalsConcededFT.toFixed(2)}</span>
+                                    <span class="stat-label">Sofr. FT</span>
                                 </div>
                             </div>
                         `;
@@ -1215,9 +1237,9 @@
                     }
                 });
 
-                if (selectedLeague === '' || selectedLeague.toLowerCase().includes('battle') && !selectedLeague.toLowerCase().includes('volta')) {
+                if (selectedLeague === '' || selectedLeague === 'Battle 8m') {
                     const battleLeagues = Object.keys(playerStats).filter(league => 
-                        league.includes('battle') && !league.includes('volta')
+                        league === 'Battle 8m'
                     );
                     battleLeagues.forEach(leagueName => {
                         const players = playerStats[leagueName];
@@ -1244,8 +1266,8 @@
                     strategyResults.overBattle = strategyResults.overBattle.slice(0, 5);
                 }
 
-                if (selectedLeague === '' || selectedLeague.toLowerCase().includes('gt')) {
-                    const gtLeagues = Object.keys(playerStats).filter(league => league.includes('gt'));
+                if (selectedLeague === '' || selectedLeague === 'GT Leagues 12m') {
+                    const gtLeagues = Object.keys(playerStats).filter(league => league === 'GT Leagues 12m');
                     gtLeagues.forEach(leagueName => {
                         const players = playerStats[leagueName];
                         const eligiblePlayers = Object.keys(players).filter(player => 
@@ -1271,8 +1293,8 @@
                     strategyResults.gtOverHt = strategyResults.gtOverHt.slice(0, 5);
                 }
 
-                if (selectedLeague === '' || selectedLeague.toLowerCase().includes('volta')) {
-                    const voltaLeagues = Object.keys(playerStats).filter(league => league.includes('volta'));
+                if (selectedLeague === '' || selectedLeague === 'Battle Volta 6m') {
+                    const voltaLeagues = Object.keys(playerStats).filter(league => league === 'Battle Volta 6m');
                     voltaLeagues.forEach(leagueName => {
                         const players = playerStats[leagueName];
                         const eligiblePlayers = Object.keys(players).filter(player => 
