--- a/dashboard.html
+++ b/dashboard.html
@@ -134,33 +134,40 @@
         .league-adriatic.active { background: #f59e0b; border-color: #f59e0b; }
         .best-players-container {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 20px;
-            margin: 20px 0;
+            grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+            gap: 25px;
+            margin: 30px 0;
+            padding: 0 10px;
         }
         .best-player-section {
             background: rgba(255, 255, 255, 0.05);
-            border-radius: 10px;
-            padding: 15px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+            border-radius: 12px;
+            padding: 20px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
         }
         .best-player-league {
-            margin-bottom: 10px;
+            margin-bottom: 15px;
+            font-size: 1.2rem;
+            font-weight: 600;
+            color: #00cc66;
+            border-bottom: 2px solid rgba(0, 204, 102, 0.3);
+            padding-bottom: 8px;
         }
         .best-player-card {
             background: rgba(255, 255, 255, 0.03);
             border-radius: 8px;
-            padding: 10px;
-            margin-bottom: 10px;
+            padding: 15px;
+            margin-bottom: 15px;
             display: flex;
-            justify-content: space-between;
-            align-items: center;
-            max-width: 100%;
+            flex-direction: column;
+            gap: 15px;
+            width: 100%;
         }
         .best-player-info {
             display: flex;
             align-items: center;
-            max-width: 60%;
+            width: 100%;
+            gap: 10px;
         }
         .best-player-icon {
             color: #ffeb3b;
@@ -168,28 +175,35 @@
         }
         .best-player-name {
             font-weight: bold;
-            white-space: nowrap;
+            font-size: 1.1rem;
             overflow: hidden;
             text-overflow: ellipsis;
-            max-width: 100%;
+            max-width: calc(100% - 30px);
         }
         .best-player-stats {
-            display: flex;
-            gap: 10px;
-            flex-wrap: wrap;
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+            gap: 15px;
+            width: 100%;
         }
         .stat-item {
             text-align: center;
-            min-width: 70px;
+            background: rgba(0, 0, 0, 0.2);
+            padding: 10px;
+            border-radius: 8px;
         }
         .stat-value {
             display: block;
             font-weight: bold;
             color: #00cc66;
+            font-size: 1.2rem;
+            margin-bottom: 5px;
         }
         .stat-label {
-            font-size: 0.8rem;
+            font-size: 0.85rem;
             color: #a0a0a0;
+            display: block;
+            line-height: 1.2;
         }
         .charts-row {
             display: grid;
@@ -240,66 +254,139 @@
         }
         .strategy-container {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 20px;
-            margin: 20px 0;
+            grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+            gap: 25px;
+            margin: 30px 0;
+            padding: 0 10px;
         }
         .strategy-card {
             background: rgba(255, 255, 255, 0.05);
-            border-radius: 10px;
-            padding: 15px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+            border-radius: 12px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
             min-height: 200px;
+            display: flex;
+            flex-direction: column;
+            overflow: hidden;
+            transition: transform 0.3s ease;
+        }
+        .strategy-card:hover {
+            transform: translateY(-5px);
         }
         .strategy-header {
             background: linear-gradient(90deg, #00cc66, #006633);
             color: #fff;
-            padding: 10px;
-            border-radius: 8px 8px 0 0;
+            padding: 15px;
+            border-radius: 12px 12px 0 0;
             font-weight: bold;
             text-align: center;
+            font-size: 1.2rem;
+            letter-spacing: 1px;
+            text-transform: uppercase;
         }
         .strategy-body {
-            padding: 10px;
+            padding: 20px;
+            flex: 1;
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
         }
         .strategy-rules {
             background: rgba(0, 0, 0, 0.2);
-            padding: 10px;
-            border-radius: 5px;
-            margin-bottom: 10px;
+            padding: 15px;
+            border-radius: 8px;
+            margin-bottom: 15px;
+            line-height: 1.5;
+        }
+        .strategy-rules p {
+            margin: 0;
+        }
+        .strategy-rules strong {
+            color: #00cc66;
+            display: block;
+            margin-bottom: 15px;
+            font-size: 1.2rem;
+            text-align: center;
+        }
+        .strategy-criteria {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+            gap: 10px;
+        }
+        .strategy-criteria li {
+            background: rgba(255, 255, 255, 0.05);
+            padding: 10px 15px;
+            border-radius: 6px;
+            display: flex;
+            align-items: center;
+            font-size: 0.95rem;
+        }
+        .strategy-criteria li:before {
+            content: '✓';
+            color: #00cc66;
+            margin-right: 8px;
+            font-weight: bold;
         }
         .strategy-matchup {
             background: rgba(255, 255, 255, 0.03);
-            padding: 10px;
-            border-radius: 5px;
-            margin-bottom: 10px;
-            max-width: 100%;
+            padding: 20px;
+            border-radius: 12px;
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            gap: 15px;
+            transition: all 0.3s ease;
+            border: 1px solid rgba(255, 255, 255, 0.1);
+        }
+        .strategy-matchup:hover {
+            background: rgba(255, 255, 255, 0.05);
+            border-color: rgba(0, 204, 102, 0.3);
         }
         .strategy-matchup h6 {
-            font-size: 1rem;
-            white-space: nowrap;
+            font-size: 1.1rem;
+            font-weight: 600;
+            color: #ffeb3b;
+            margin: 0;
+            line-height: 1.4;
+            display: -webkit-box;
+            -webkit-line-clamp: 2;
+            -webkit-box-orient: vertical;
             overflow: hidden;
-            text-overflow: ellipsis;
-            margin: 0 0 10px;
         }
         .strategy-stats {
-            display: flex;
-            justify-content: space-between;
-            gap: 10px;
-            flex-wrap: wrap;
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
+            gap: 15px;
+            width: 100%;
+            margin-top: 5px;
         }
         .strategy-stat {
             text-align: center;
-            min-width: 80px;
+            background: rgba(0, 0, 0, 0.2);
+            padding: 15px;
+            border-radius: 10px;
+            border: 1px solid rgba(255, 255, 255, 0.05);
+            transition: all 0.3s ease;
+        }
+        .strategy-stat:hover {
+            background: rgba(0, 0, 0, 0.3);
+            border-color: rgba(0, 204, 102, 0.2);
+            transform: translateY(-2px);
         }
         .strategy-stat-value {
             display: block;
             font-weight: bold;
             color: #00cc66;
+            font-size: 1.2rem;
+            margin-bottom: 5px;
         }
         .strategy-stat-label {
-            font-size: 0.8rem;
+            font-size: 0.85rem;
             color: #a0a0a0;
+            display: block;
+            line-height: 1.2;
         }
         .loading {
             position: fixed;
@@ -486,7 +573,17 @@
                         <div class="strategy-header">OVER_BATTLE</div>
                         <div class="strategy-body" id="overBattleResults">
                             <div class="strategy-rules">
-                                <p><strong>Regras OVER_BATTLE:</strong> Identifica confrontos entre jogadores da liga Battle (8 minutos) com pelo menos 70% de jogos com Over 2.5 gols no tempo regulamentar (FT) e um mínimo de 3 jogos disputados. Considera apenas confrontos acima de 96% da média geral de Over 2.5.</p>
+                                <p><strong>Regras OVER_BATTLE:</strong></p>
+                                <ul class="strategy-criteria">
+                                    <li>Liga: Esoccer Battle 8 mins</li>
+                                    <li>Análise: Últimos 8 jogos</li>
+                                    <li>Média de gols HT: >2.5</li>
+                                    <li>BTTS HT: Sim</li>
+                                    <li>Média de gols FT: >5.0</li>
+                                    <li>BTTS FT: Sim</li>
+                                    <li>0x0 HT: 0%</li>
+                                    <li>0x0 FT: 0%</li>
+                                </ul>
                             </div>
                         </div>
                     </div>
@@ -494,7 +591,15 @@
                         <div class="strategy-header">GT_OVER_HT</div>
                         <div class="strategy-body" id="gtOverHtResults">
                             <div class="strategy-rules">
-                                <p><strong>Regras GT_OVER_HT:</strong> Identifica confrontos entre jogadores da liga GT Leagues com pelo menos 65% de jogos com Over 1.5 gols no primeiro tempo (HT) e um mínimo de 3 jogos disputados. Considera apenas confrontos acima de 96% da média geral de Over 1.5 HT.</p>
+                                <p><strong>Regras GT_OVER_HT:</strong></p>
+                                <ul class="strategy-criteria">
+                                    <li>Liga: Esoccer GT Leagues 12 min</li>
+                                    <li>Análise: Últimos 8 jogos</li>
+                                    <li>Over 2.5 HT: 100%</li>
+                                    <li>Média de gols HT: >3.0</li>
+                                    <li>BTTS HT: 100%</li>
+                                    <li>0x0 HT: 0%</li>
+                                </ul>
                             </div>
                         </div>
                     </div>
@@ -502,7 +607,17 @@
                         <div class="strategy-header">VOLTA_OVER</div>
                         <div class="strategy-body" id="voltaOverResults">
                             <div class="strategy-rules">
-                                <p><strong>Regras VOLTA_OVER:</strong> Identifica confrontos entre jogadores da liga Battle Volta (6 minutos) com pelo menos 75% de jogos com Over 2.5 gols no tempo regulamentar (FT) e um mínimo de 3 jogos disputados. Considera apenas confrontos acima de 96% da média geral de Over 2.5.</p>
+                                <p><strong>Regras VOLTA_OVER:</strong></p>
+                                <ul class="strategy-criteria">
+                                    <li>Liga: Esoccer Volta 6 min</li>
+                                    <li>Análise: Últimos 8 jogos</li>
+                                    <li>Over gols FT: >6.5</li>
+                                    <li>BTTS HT: 100%</li>
+                                    <li>BTTS FT: 100%</li>
+                                    <li>0x0 HT: 0%</li>
+                                    <li>0x0 FT: 0%</li>
+                                    <li>Over HT: >3.0</li>
+                                </ul>
                             </div>
                         </div>
                     </div>
